# EncodingUtil

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/encoding_util/: encoding_util.hpp
tests/: CMakeLists.txt  test_main.cpp
